--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="interface.css" />
+		<title>Time</title>
 	</head>
 	<body>
-		<button onclick="cookieClick(1)">Click Me!</button>
-		<br />
-		Cookies: <span id="cookies">0</span>
-		<br />
-		<button onclick="buyCursor()">Buy Cursor</button>
-		<br />
-		Cursors: <span id="cursors">0</span>
-		<br />
-		Cursor Cost: <span id="cursorCost">10</span>
+		<span id="cookies">0</span>
 		<script type="text/javascript" src="scrpit.js"></script>
 	</body>
 </html>
