--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	</head>
 	<body>
 		<span id="cookies">0</span>
-		<script type="text/javascript" src="scrpit.js"></script>
+		<script type="text/javascript" src="script.js"></script>
 	</body>
 </html>
