--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Time</title>
 	</head>
 	<body>
-		<span id="cookies">0</span>
+		<p>You have wasted <span id="cookies">0</span> seconds</p>
 		<script type="text/javascript" src="script.js"></script>
 	</body>
 </html>
