--- a/big.html
+++ b/big.html
@@ -1,1 +1,11 @@
-1
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>Time</title>
+	</head>
+	<body>
+		<a href="index.html">back</a>
+    You have wasted <span id="cookies">0</span> seconds. (or something like that)
+		<script type="text/javascript" src="big.js"></script>
+	</body>
+</html>
