--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Time</title>
 	</head>
 	<body>
+		<a href="big.html">to big numbers</a>
 		You have wasted <span id="cookies">0</span> seconds.
 		<script type="text/javascript" src="script.js"></script>
 	</body>
