--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Time</title>
+		<link rel="stylesheet" type="text/css" href="interface.css" />
 	</head>
 	<body>
 		You have wasted <span id="cookies">0</span> seconds.
