--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="interface.css" />
+		<title>Time Waster</title>
+		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 	<body>
-		You have wasted <span id="cookies">0</span> seconds.
+		You have wasted <span class="seconds">0</span> seconds. <br/> You are a <span class="level">Assistant</span> time waster.
 		<script type="text/javascript" src="script.js"></script>
 	</body>
 </html>
