--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 	<body>
-		You have wasted <span class="seconds">0</span> seconds.
+		You have wasted <span class="time">0</span> seconds.
 		<script type="text/javascript" src="script.js"></script>
 	</body>
 </html>
