--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>Time Waster</title>
-		<link rel="stylesheet" type="text/css" href="style.css" />
-	</head>
-	<body>
-		You have wasted <span class="time">0</span> seconds.
-		<script type="text/javascript" src="script.js"></script>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Counter</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background: #f0f0f0;
+    }
+    #counter {
+      font-size: 5rem;
+    }
+  </style>
+</head>
+<body>
+  <div id="counter">0</div>
+
+  <script>
+    let count = 0;
+    const counterEl = document.getElementById('counter');
+
+    setInterval(() => {
+      count++;
+      counterEl.textContent = count;
+    }, 1000);
+  </script>
+</body>
 </html>
