--- a/index.html
+++ b/index.html
@@ -25,10 +25,21 @@
 
     // Array to store ranks and their thresholds
     const ranks = [
-      { threshold: 10, name: "Beginner" },
-      { threshold: 50, name: "Intermediate" },
-      { threshold: 100, name: "Advanced" },
-      { threshold: 200, name: "Master" }
+      { threshold: 0, name: "Beginner" },
+      { threshold: 2, name: "Intermediate" },
+      { threshold: 4, name: "Advanced" },
+      { threshold: 9, name: "Master" },
+      { threshold: 14, name: "1" },
+      { threshold: 19, name: "2" },
+      { threshold: 24, name: "3" },
+      { threshold: 49, name: "4" },
+      { threshold: 68, name: "5" },
+      { threshold: 99, name: "6" },
+      { threshold: 149, name: "7" },
+      { threshold: 199, name: "7" },
+      { threshold: 249, name: "9" },
+      { threshold: 499, name: "10" },
+      { threshold: 599, name: "11" },
     ];
 
     // Function to determine the rank based on the total time
