--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Incrementing Time Tracker with Ranks</title>
+  <title>Time Waster</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div>
+  <header>
+    <h1 id="title">Time Waster</h1>
+    <h2 id="subtitle">By Marjamjelly</h2>
+  </header>
+
+  <main>
     <div id="time-tracker">
       <div id="seconds">
         <span class="label">Seconds:</span> <span class="value">0</span>
@@ -16,7 +21,14 @@
     <div id="rank">
       <span class="label">Rank:</span> <span class="value">Beginner</span>
     </div>
-  </div>
+  </main>
+
+  <footer>
+    <a href="#" class="footer-link">Link 1</a>
+    <a href="#" class="footer-link">Link 2</a>
+    <a href="#" class="footer-link">Link 3</a>
+    <a href="#" class="footer-link">Link 4</a>
+  </footer>
 
   <script>
     let totalSeconds = 0;
@@ -25,21 +37,10 @@
 
     // Array to store ranks and their thresholds
     const ranks = [
-      { threshold: 0, name: "Beginner" },
-      { threshold: 2, name: "Intermediate" },
-      { threshold: 4, name: "Advanced" },
-      { threshold: 9, name: "Master" },
-      { threshold: 14, name: "1" },
-      { threshold: 19, name: "2" },
-      { threshold: 24, name: "3" },
-      { threshold: 49, name: "4" },
-      { threshold: 68, name: "5" },
-      { threshold: 99, name: "6" },
-      { threshold: 149, name: "7" },
-      { threshold: 199, name: "7" },
-      { threshold: 249, name: "9" },
-      { threshold: 499, name: "10" },
-      { threshold: 599, name: "11" },
+      { threshold: 10, name: "Beginner" },
+      { threshold: 50, name: "Intermediate" },
+      { threshold: 100, name: "Advanced" },
+      { threshold: Infinity, name: "Master" }
     ];
 
     // Function to determine the rank based on the total time
