--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
   </main>
 
   <footer>
-    <a href="#" class="footer-link">Link 1</a>
-    <a href="#" class="footer-link">Link 2</a>
-    <a href="#" class="footer-link">Link 3</a>
-    <a href="#" class="footer-link">Link 4</a>
+    <a href="https://sites.google.com/view/st-central/home" class="footer-link">Storm Networks</a> |
+    <a href="https://snwiki.com" class="footer-link">SN Wiki</a> |
+    <a href="https://github.com/Marjamjelly" class="footer-link">My Github</a> |
+    <a href="https://marjamjelly.github.io/" class="footer-link">My Personal Site</a> |
   </footer>
 
   <script>
@@ -37,10 +37,42 @@
 
     // Array to store ranks and their thresholds
     const ranks = [
-      { threshold: 10, name: "Beginner" },
-      { threshold: 50, name: "Intermediate" },
-      { threshold: 100, name: "Advanced" },
-      { threshold: Infinity, name: "Master" }
+      { threshold: 1, name: "Junior Beginner" },
+      { threshold: 3, name: "Beginner" },
+      { threshold: 5, name: "Junior" },
+      { threshold: 10, name: "Novice" },
+      { threshold: 25, name: "Intermediate" },
+      { threshold: 30, name: "Senior" },
+      { threshold: 50, name: "Master" },
+      { threshold: 60, name: "Minuteman" },
+      { threshold: 90, name: "S-tier" },
+      { threshold: 120, name: "Pure Beginner" },
+      { threshold: 180, name: "Pure Junior" },
+      { threshold: 300, name: "Pure Intermediate" },
+      { threshold: 420, name: "Pure Senior" },
+      { threshold: 600, name: "Pure Master" },
+      { threshold: 900, name: "SS-tier"},
+      { threshold: 1000, name: "Millennarian" },
+      { threshold: 1200, name: "Devoted" },
+      { threshold: 1800, name: "Halfway" },
+      { threshold: 2000, name: "Duomillennarian" },
+      { threshold: 2700, name: "Beginner Time Waster" },
+      { threshold: 3000, name: "Trimillennarian" },
+      { threshold: 3600, name: "Hourman" },
+      { threshold: 5000, name: "Perfect Score" },
+      { threshold: 5400, name: "Feature length" },
+      { threshold: , name: "" },
+      { threshold: , name: "" },
+      { threshold: , name: "" },
+      { threshold: , name: "" },
+      { threshold: , name: "" },
+      { threshold: , name: "" },
+      { threshold: , name: "" },
+      { threshold: , name: "" },
+      { threshold: , name: "" },
+      { threshold: , name: "" },
+      { threshold: , name: "" },
+      { threshold: 86400, name: "Dayman" },
     ];
 
     // Function to determine the rank based on the total time
