--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       { threshold: 30, name: "Senior" },
       { threshold: 50, name: "Master" },
       { threshold: 60, name: "Minuteman" },
+      { threshold: 69, name: "Nice" },
       { threshold: 90, name: "S-tier" },
       { threshold: 120, name: "Pure Beginner" },
       { threshold: 180, name: "Pure Junior" },
@@ -61,12 +62,16 @@
       { threshold: 3600, name: "Hourman" },
       { threshold: 5000, name: "Perfect Score" },
       { threshold: 5400, name: "Feature length" },
-      { threshold: , name: "" },
-      { threshold: , name: "" },
-      { threshold: , name: "" },
-      { threshold: , name: "" },
-      { threshold: , name: "" },
-      { threshold: , name: "" },
+      { threshold: 6969, name: "Even Nicer" },
+      { threshold: 10000, name: "Decimillennarian" },
+      { threshold: 18000, name: "Intermediate Time Waster" },
+      { threshold: 20000, name: "CEO" },
+      { threshold: 25000, name: "Perfet Game" },
+      { threshold: 28800, name: "Work Day" },
+      { threshold: 30000, name: "Hermit" },
+      { threshold: 36000, name: "Lord" },
+      { threshold: 42069, name: "Nicest" },
+      { threshold: 50000, name: "Perfect x10" },
       { threshold: , name: "" },
       { threshold: , name: "" },
       { threshold: , name: "" },
