--- a/index.html
+++ b/index.html
@@ -69,14 +69,17 @@
       { threshold: 25000, name: "Perfet Game" },
       { threshold: 28800, name: "Work Day" },
       { threshold: 30000, name: "Hermit" },
+      { threshold: 33333, name: "Third" }, 
       { threshold: 36000, name: "Lord" },
       { threshold: 42069, name: "Nicest" },
+      { threshold: 43200, name: "50% Dayman" },
       { threshold: 50000, name: "Perfect x10" },
+      { threshold: 69420, name: "Even Nicer" },
       { threshold: , name: "" },
       { threshold: , name: "" },
       { threshold: , name: "" },
-      { threshold: , name: "" },
-      { threshold: , name: "" },
+      { threshold: 72000, name: "Time Waster" },
+      { threshold: 77777, name: "Gods Number" },
       { threshold: 86400, name: "Dayman" },
     ];
 
