--- a/index.html
+++ b/index.html
@@ -74,13 +74,19 @@
       { threshold: 42069, name: "Nicest" },
       { threshold: 43200, name: "50% Dayman" },
       { threshold: 50000, name: "Perfect x10" },
+      { threshold: 60000, name: "Underlord" },
       { threshold: 69420, name: "Even Nicer" },
-      { threshold: , name: "" },
-      { threshold: , name: "" },
-      { threshold: , name: "" },
+      { threshold: 70000, name: "Overlord" },
       { threshold: 72000, name: "Time Waster" },
       { threshold: 77777, name: "Gods Number" },
+      { threshold: 80000, name: "King" },
       { threshold: 86400, name: "Dayman" },
+      { threshold: 88888, name: "Chinese Number" },
+      { threshold: 100000, name: "Centamillennial" },
+      { threshold: 604800, name: "Weekman" },
+      { threshold: 999999, name: "God" },
+      { threshold: 6969420, name: "MAXIMUM NICEST" },
+      { threshold: 31536000, name: "Pure Time Waster" },
     ];
 
     // Function to determine the rank based on the total time
