change text for rank up

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <span class="label">Rank:</span> <span class="value" id="rank-value">Beginner</span>
     </div>
     <div id="next-threshold">
-      <span class="label">Next Threshold:</span> <span class="value" id="threshold-value">10</span>
+      <span class="label">Rank up: (seconds)</span> <span class="value" id="threshold-value">10</span>
     </div>
   </main>
 
