--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
     </div>
     <div id="rank">
-      <span class="label">Rank:</span> <span class="value" id="rank-value">Beginner</span>
+      <span class="label">Rank:</span> <span class="value" id="rank-value" class="">Beginner</span>
     </div>
     <div id="next-threshold">
       <span class="label">Next Rank:</span> <span class="value" id="threshold-value">10 seconds</span>
@@ -39,68 +39,67 @@
     const rankElement = document.getElementById('rank-value');
     const thresholdElement = document.getElementById('threshold-value');
 
-    // Array to store ranks and their thresholds
+    // Array to store ranks and their thresholds, each with a style class
     const ranks = [
-      { threshold: 1, name: "Junior Beginner" },
-      { threshold: 3, name: "Beginner" },
-      { threshold: 5, name: "Junior" },
-      { threshold: 10, name: "Novice" },
-      { threshold: 25, name: "Intermediate" },
-      { threshold: 30, name: "Senior" },
-      { threshold: 50, name: "Master" },
-      { threshold: 60, name: "Minuteman" },
-      { threshold: 69, name: "Nice" },
-      { threshold: 90, name: "S-tier" },
-      { threshold: 120, name: "Pure Beginner" },
-      { threshold: 180, name: "Pure Junior" },
-      { threshold: 300, name: "Pure Intermediate" },
-      { threshold: 420, name: "Pure Senior" },
-      { threshold: 600, name: "Pure Master" },
-      { threshold: 900, name: "SS-tier"},
-      { threshold: 1000, name: "Millennarian" },
-      { threshold: 1200, name: "Devoted" },
-      { threshold: 1800, name: "Halfway" },
-      { threshold: 2000, name: "Duomillennarian" },
-      { threshold: 2700, name: "Beginner Time Waster" },
-      { threshold: 3000, name: "Trimillennarian" },
-      { threshold: 3600, name: "Hourman" },
-      { threshold: 5000, name: "Perfect Score" },
-      { threshold: 5400, name: "Feature length" },
-      { threshold: 6969, name: "Even Nicer" },
-      { threshold: 10000, name: "Decimillennarian" },
-      { threshold: 18000, name: "Intermediate Time Waster" },
-      { threshold: 20000, name: "CEO" },
-      { threshold: 25000, name: "Perfet Game" },
-      { threshold: 28800, name: "Work Day" },
-      { threshold: 30000, name: "Hermit" },
-      { threshold: 33333, name: "Third" }, 
-      { threshold: 36000, name: "Lord" },
-      { threshold: 42069, name: "Nicest" },
-      { threshold: 43200, name: "50% Dayman" },
-      { threshold: 50000, name: "Perfect x10" },
-      { threshold: 60000, name: "Underlord" },
-      { threshold: 69420, name: "Even Nicer" },
-      { threshold: 70000, name: "Overlord" },
-      { threshold: 72000, name: "Time Waster" },
-      { threshold: 77777, name: "Gods Number" },
-      { threshold: 80000, name: "King" },
-      { threshold: 86400, name: "Dayman" },
-      { threshold: 88888, name: "Chinese Number" },
-      { threshold: 100000, name: "Centamillennial" },
-      { threshold: 604800, name: "Weekman" },
-      { threshold: 999999, name: "God" },
-      { threshold: 6969420, name: "MAXIMUM NICEST" },
-      { threshold: 31536000, name: "Pure Time Waster" },
+      { threshold: 1, name: "Junior Beginner", styleClass: "rank-junior-beginner" },
+      { threshold: 3, name: "Beginner", styleClass: "rank-beginner" },
+      { threshold: 5, name: "Junior", styleClass: "rank-junior" },
+      { threshold: 10, name: "Novice", styleClass: "rank-novice" },
+      { threshold: 25, name: "Intermediate", styleClass: "rank-intermediate" },
+      { threshold: 30, name: "Senior", styleClass: "rank-senior" },
+      { threshold: 50, name: "Master", styleClass: "rank-master" },
+      { threshold: 60, name: "Minuteman", styleClass: "rank-minuteman" },
+      { threshold: 69, name: "Nice", styleClass: "rank-nice" },
+      { threshold: 90, name: "S-tier", styleClass: "rank-s-tier" },
+      { threshold: 120, name: "Pure Beginner", styleClass: "rank-pure-beginner" },
+      { threshold: 180, name: "Pure Junior", styleClass: "rank-pure-junior" },
+      { threshold: 300, name: "Pure Intermediate", styleClass: "rank-pure-intermediate" },
+      { threshold: 420, name: "Pure Senior", styleClass: "rank-pure-senior" },
+      { threshold: 600, name: "Pure Master", styleClass: "rank-pure-master" },
+      { threshold: 900, name: "SS-tier", styleClass: "rank-ss-tier" },
+      { threshold: 1000, name: "Millennarian", styleClass: "rank-millennarian" },
+      { threshold: 1200, name: "Devoted", styleClass: "rank-devoted" },
+      { threshold: 1800, name: "Halfway", styleClass: "rank-halfway" },
+      { threshold: 2000, name: "Duomillennarian", styleClass: "rank-duomillennarian" },
+      { threshold: 2700, name: "Beginner Time Waster", styleClass: "rank-beginner-time-waster" },
+      { threshold: 3000, name: "Trimillennarian", styleClass: "rank-trimillennarian" },
+      { threshold: 3600, name: "Hourman", styleClass: "rank-hourman" },
+      { threshold: 5000, name: "Perfect Score", styleClass: "rank-perfect-score" },
+      { threshold: 5400, name: "Feature length", styleClass: "rank-feature-length" },
+      { threshold: 6969, name: "Even Nicer", styleClass: "rank-even-nicer" },
+      { threshold: 10000, name: "Decimillennarian", styleClass: "rank-decimillennarian" },
+      { threshold: 18000, name: "Intermediate Time Waster", styleClass: "rank-intermediate-time-waster" },
+      { threshold: 20000, name: "CEO", styleClass: "rank-ceo" },
+      { threshold: 25000, name: "Perfet Game", styleClass: "rank-perfet-game" },
+      { threshold: 28800, name: "Work Day", styleClass: "rank-work-day" },
+      { threshold: 30000, name: "Hermit", styleClass: "rank-hermit" },
+      { threshold: 33333, name: "Third", styleClass: "rank-third" },
+      { threshold: 36000, name: "Lord", styleClass: "rank-lord" },
+      { threshold: 42069, name: "Nicest", styleClass: "rank-nicest" },
+      { threshold: 43200, name: "50% Dayman", styleClass: "rank-50-percent-dayman" },
+      { threshold: 50000, name: "Perfect x10", styleClass: "rank-perfect-x10" },
+      { threshold: 60000, name: "Underlord", styleClass: "rank-underlord" },
+      { threshold: 69420, name: "Even Nicer", styleClass: "rank-even-nicer-again" },
+      { threshold: 70000, name: "Overlord", styleClass: "rank-overlord" },
+      { threshold: 72000, name: "Time Waster", styleClass: "rank-time-waster" },
+      { threshold: 77777, name: "Gods Number", styleClass: "rank-gods-number" },
+      { threshold: 80000, name: "King", styleClass: "rank-king" },
+      { threshold: 86400, name: "Dayman", styleClass: "rank-dayman" },
+      { threshold: 88888, name: "Chinese Number", styleClass: "rank-chinese-number" },
+      { threshold: 100000, name: "Centamillennial", styleClass: "rank-centamillennial" },
+      { threshold: 604800, name: "Weekman", styleClass: "rank-weekman" },
+      { threshold: 999999, name: "God", styleClass: "rank-god" },
+      { threshold: 6969420, name: "MAXIMUM NICEST", styleClass: "rank-maximum-nicest" },
+      { threshold: 31536000, name: "Pure Time Waster", styleClass: "rank-pure-time-waster" }
     ];
 
-    // Function to determine the current rank and the next threshold
     function getRankAndThreshold(totalSeconds) {
-      let currentRank = "Beginner";
+      let currentRank = { name: "Beginner", styleClass: "rank-beginner" };
       let nextThreshold = Infinity;
 
       for (let i = 0; i < ranks.length; i++) {
         if (totalSeconds >= ranks[i].threshold) {
-          currentRank = ranks[i].name;
+          currentRank = ranks[i];
         } else {
           nextThreshold = ranks[i].threshold;
           break;
@@ -109,68 +108,28 @@
       return { currentRank, nextThreshold };
     }
 
-    // Function to convert seconds to the largest possible units (e.g., minutes, hours)
-    function formatTime(seconds) {
-      const days = Math.floor(seconds / 86400);
-      const hours = Math.floor((seconds % 86400) / 3600);
-      const minutes = Math.floor((seconds % 3600) / 60);
-      const remainingSeconds = seconds % 60;
-
-      let formattedTime = [];
-      if (days > 0) formattedTime.push(`${days} day${days > 1 ? "s" : ""}`);
-      if (hours > 0) formattedTime.push(`${hours} hour${hours > 1 ? "s" : ""}`);
-      if (minutes > 0) formattedTime.push(`${minutes} minute${minutes > 1 ? "s" : ""}`);
-      if (remainingSeconds > 0 || formattedTime.length === 0) {
-        formattedTime.push(`${remainingSeconds} second${remainingSeconds > 1 ? "s" : ""}`);
-      }
-
-      return formattedTime.join(" ");
-    }
-
-    // Update the rank and next threshold display
     function updateRankAndThreshold() {
       const { currentRank, nextThreshold } = getRankAndThreshold(totalSeconds);
-      if (rankElement.textContent !== currentRank) {
+      
+      if (rankElement.textContent !== currentRank.name) {
+        rankElement.textContent = currentRank.name;
+
+        // Remove all previous styling classes
+        rankElement.className = "";
+        rankElement.classList.add(currentRank.styleClass);
+
         // Add animation for rank change
         rankElement.classList.add("rank-change");
         setTimeout(() => rankElement.classList.remove("rank-change"), 1000);
       }
-      rankElement.textContent = currentRank;
-      thresholdElement.textContent = formatTime(nextThreshold - totalSeconds);
+
+      thresholdElement.textContent = `${nextThreshold - totalSeconds} seconds`;
     }
 
-    // Increment the total seconds and update the display every second
     setInterval(() => {
       totalSeconds++;
-      updateTimeCounters();
       updateRankAndThreshold();
     }, 1000);
-
-    // Function to update the time display
-    function updateTimeCounters() {
-      const seconds = totalSeconds % 60;
-      const minutes = Math.floor(totalSeconds / 60) % 60;
-      const hours = Math.floor(totalSeconds / 3600) % 24;
-      const days = Math.floor(totalSeconds / 86400);
-
-      updateOrCreateCounter("seconds", seconds, "Seconds:");
-      if (totalSeconds >= 60) updateOrCreateCounter("minutes", minutes, "Minutes:");
-      if (totalSeconds >= 3600) updateOrCreateCounter("hours", hours, "Hours:");
-      if (totalSeconds >= 86400) updateOrCreateCounter("days", days, "Days:");
-    }
-
-    // Function to update or create a counter dynamically in the DOM
-    function updateOrCreateCounter(id, value, label) {
-      let element = document.getElementById(id);
-      if (!element) {
-        element = document.createElement('div');
-        element.id = id;
-        element.innerHTML = `<span class="label">${label}</span> <span class="value">${value}</span>`;
-        timeTracker.appendChild(element);
-      } else {
-        element.querySelector(".value").textContent = value;
-      }
-    }
   </script>
 </body>
 </html>
