--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
     const timeTracker = document.getElementById('time-tracker');
     const rankElement = document.getElementById('rank-value');
     const thresholdElement = document.getElementById('threshold-value');
-
-    // Array to store ranks and their thresholds, each with a style class
+  
     const ranks = [
       { threshold: 1, name: "Junior Beginner", styleClass: "rank-junior-beginner" },
       { threshold: 3, name: "Beginner", styleClass: "rank-beginner" },
@@ -92,11 +91,11 @@
       { threshold: 6969420, name: "MAXIMUM NICEST", styleClass: "rank-maximum-nicest" },
       { threshold: 31536000, name: "Pure Time Waster", styleClass: "rank-pure-time-waster" }
     ];
-
+  
     function getRankAndThreshold(totalSeconds) {
       let currentRank = { name: "Beginner", styleClass: "rank-beginner" };
       let nextThreshold = Infinity;
-
+  
       for (let i = 0; i < ranks.length; i++) {
         if (totalSeconds >= ranks[i].threshold) {
           currentRank = ranks[i];
@@ -107,27 +106,33 @@
       }
       return { currentRank, nextThreshold };
     }
-
+  
     function updateRankAndThreshold() {
       const { currentRank, nextThreshold } = getRankAndThreshold(totalSeconds);
-      
+  
       if (rankElement.textContent !== currentRank.name) {
         rankElement.textContent = currentRank.name;
-
+  
         // Remove all previous styling classes
         rankElement.className = "";
         rankElement.classList.add(currentRank.styleClass);
-
+  
         // Add animation for rank change
         rankElement.classList.add("rank-change");
         setTimeout(() => rankElement.classList.remove("rank-change"), 1000);
       }
-
+  
       thresholdElement.textContent = `${nextThreshold - totalSeconds} seconds`;
     }
-
+  
+    function updateSecondsCounter() {
+      const secondsElement = document.querySelector('#seconds .value');
+      secondsElement.textContent = totalSeconds;
+    }
+  
     setInterval(() => {
       totalSeconds++;
+      updateSecondsCounter(); // Update the seconds counter
       updateRankAndThreshold();
     }, 1000);
   </script>
