add header and change footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="top">
+    <div class="nav-container">
+      <h1 id="site-title">Time Waster</h1>
+    </div>
+  </div>
   <header>
     <h1 id="title">Time Waster</h1>
     <h2 id="subtitle">By Marjamjelly</h2>
@@ -28,10 +33,7 @@
   </main>
 
   <footer>
-    <a href="https://sites.google.com/view/st-central/home" class="footer-link">Storm Networks</a> |
-    <a href="https://snwiki.com" class="footer-link">SN Wiki</a> |
-    <a href="https://github.com/Marjamjelly" class="footer-link">My Github</a> |
-    <a href="https://marjamjelly.github.io/" class="footer-link">My Personal Site</a> |
+    <p>© 2025 Marjamjelly. All rights reserved.</p>
   </footer>
 
   <script>
